--- a/3-js-basics/step1-fundamentals/practice4-function1.html
+++ b/3-js-basics/step1-fundamentals/practice4-function1.html
@@ -5,10 +5,14 @@
 <title>javascript function</title>
 </head>
 <body>
-javascript 함수 <br><br>
+	<!--
+	함수(Function): 특정 작업을 수행하는 코드들을 하나로 묶어서 이름을 붙인 것으로, 필요할 때마다 호출하여 사용할 수 있는 재사용 가능한 코드 블록
+	-->
+javascript 1. 함수 선언문 (Function Declaration)<br><br>
 <button type="button" onclick="testHello()">버튼1</button><br>
 <button type="button" onclick="testBye()">버튼2</button><br>
 <button type="button" onclick="testHi(7,'장승업')">버튼3</button><br>
+<button type="button" onclick="alert(testMessage(8,'한석규'))">버튼4</button><br>
 <script type="text/javascript">
 	function testHello(){
 		alert("hello js");
@@ -18,6 +22,9 @@ javascript 함수 <br><br>
 	}
 	function testHi(num,nick){
 		alert(num+" "+nick);
+	}
+	function testMessage(message){
+		return message+ " from function";
 	}
 </script>
 </body>
