--- a/1-html-basics/step2-links/practice2.html
+++ b/1-html-basics/step2-links/practice2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>경로 이해하기</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>경로의 종류</h1>
 
     <h2>절대경로 (Absolute Path)</h2>
@@ -17,10 +17,17 @@
     <p>현재 파일 기준으로 상대적인 위치를 나타내는 방법:</p>
 
     <!-- 같은 폴더에 있는 파일 -->
-    <p><a href="page2.html">같은 폴더의 page2.html로 이동</a></p>
-
+    <p><a href="page1.html">같은 폴더의 page1.html로 이동1</a></p>
+    <p><a href="./page1.html">같은 폴더의 page1.html로 이동2</a></p>
+    <!-- ./ : 현재 폴더를 의미 
+        ✅ 의도 명확성: "현재 폴더"라는 의도가 명확
+        ✅ 일관성: 모든 상대경로를 동일한 패턴으로 표현
+        ✅ 오해 방지: 절대경로와 구분 명확
+        ✅ 협업 시 가독성: 다른 개발자가 이해하기 쉬움
+        ✅ 스크립트 환경: Node.js, 빌드 도구에서 일관성 유지
+    -->
     <!-- 하위 폴더에 있는 파일 -->
-    <p><a href="pages/about.html">pages 폴더 안의 about.html로 이동</a></p>
+    <p><a href="./pages/page2.html">pages 폴더 안의 page2.html로 이동</a></p>
 
     <!-- 상위 폴더에 있는 파일 -->
     <p><a href="../index.html">상위 폴더의 index.html로 이동</a></p>
@@ -38,6 +45,5 @@
     └── parent.html
     </pre>
     <!-- pre 태그: 입력한 그대로 공백과 줄바꿈을 유지해서 표시 -->
-
-</body>
+  </body>
 </html>
