--- a/1-html-basics/step2-links/practice3.html
+++ b/1-html-basics/step2-links/practice3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>다양한 링크 종류</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>다양한 링크 활용</h1>
 
     <!-- 1. 이메일 링크 -->
@@ -12,14 +12,9 @@
     <p><a href="mailto:example@gmail.com">이메일 보내기</a></p>
     <!-- mailto: 이메일 클라이언트 실행 -->
 
-    <p><a href="mailto:example@gmail.com?subject=안녕하세요&body=문의사항이 있습니다.">
-    제목과 내용이 미리 입력된 이메일</a></p>
-    <!-- ?subject= : 이메일 제목 미리 설정 -->
-    <!-- &body= : 이메일 내용 미리 설정 -->
-
     <!-- 2. 전화번호 링크 (모바일에서 유용) -->
     <h2>전화번호 링크</h2>
-    <p><a href="tel:010-1234-5678">전화걸기: 010-1234-5678</a></p>
+    <p><a href="tel:010-4407-1917">전화걸기: 010-4407-1917</a></p>
     <!-- tel: 전화 걸기 (모바일에서 전화앱 실행) -->
 
     <!-- 3. 페이지 내 링크 (앵커 링크) -->
@@ -28,7 +23,7 @@
     <p><a href="#section2">섹션 2로 이동</a></p>
     <p><a href="#bottom">맨 아래로 이동</a></p>
 
-    <br><br><br><br><br>
+    <br /><br /><br /><br /><br />
     <!-- 공간 확보를 위한 빈 줄들 -->
 
     <!-- id 속성으로 링크 대상 지정 -->
@@ -37,7 +32,7 @@
     <p>이곳은 섹션 1입니다. 위의 링크를 클릭하면 여기로 이동합니다.</p>
     <p>페이지 내에서 특정 위치로 바로 이동할 수 있어 편리합니다.</p>
 
-    <br><br><br><br><br>
+    <br /><br /><br /><br /><br />
 
     <h3 id="section2">섹션 2</h3>
     <p>이곳은 섹션 2입니다.</p>
@@ -45,16 +40,23 @@
 
     <!-- 4. 파일 다운로드 링크 -->
     <h2>파일 다운로드</h2>
-    <p><a href="resources/documents/Front화면설계_Process.pdf" download>PDF 파일 다운로드</a></p>
+    <p>
+      <a href="resources/documents/Front화면설계_Process.pdf" download
+        >PDF 파일 다운로드</a
+      >
+    </p>
     <!-- download 속성: 링크를 클릭했을 때 파일을 다운로드 -->
 
-    <p><a href="resources/images/iu.jpg" download="내사진.jpg">이미지 다운로드 (파일명 지정)</a></p>
+    <p>
+      <a href="resources/images/iu.jpg" download="내사진.jpg"
+        >이미지 다운로드 (파일명 지정)</a
+      >
+    </p>
     <!-- download="새이름": 다운로드할 때 파일명 지정 -->
-  
+
     <!-- 맨 아래로 이동 링크 대상 -->
-    <div id="bottom"></div>  
-      
-</body>
+    <div id="bottom"></div>
+  </body>
 </html>
 <!-- 
 이클립스 HTML 검증 설정 조정 ( 최신 속성 warning 뜰 때 ) 
