--- a/1-html-basics/step3-media/practice1.html
+++ b/1-html-basics/step3-media/practice1.html
@@ -9,19 +9,19 @@
 
     <!-- 기본 이미지 삽입 -->
     <h2>기본 이미지</h2>
-    <img src="resources/images/cat.jpg" alt="귀여운 고양이">
+    <img src="./resources/images/cat.jpg" alt="귀여운 고양이">
     <!-- src: 이미지 파일의 경로 -->
     <!-- alt: 이미지가 로드되지 않을 때 표시되는 대체 텍스트 (접근성 중요!) -->
 
     <!-- 이미지 크기 지정 -->
     <h2>크기가 지정된 이미지</h2>
-    <img src="resources/images/landscape.jpg" alt="아름다운 풍경" width="300" height="200">
+    <img src="./resources/images/landscape.jpg" alt="아름다운 풍경" width="300" height="200">
     <!-- width: 이미지 너비 (픽셀 단위) -->
     <!-- height: 이미지 높이 (픽셀 단위) -->
 
     <!-- 이미지에 제목 추가 -->
     <h2>제목이 있는 이미지</h2>
-    <img src="resources/images/flower.jpg" alt="봄꽃" title="마우스를 올리면 이 메시지가 나타납니다">
+    <img src="./resources/images/flower.jpg" alt="봄꽃" title="마우스를 올리면 이 메시지가 나타납니다">
     <!-- title: 마우스를 올렸을 때 나타나는 툴팁 -->  
 
     <!-- 절대경로(웹 URL)를 사용한 이미지 -->
