feat:html과 bootstrap

--- a/99-ha-front/01_HTML/html05_media.html
+++ b/99-ha-front/01_HTML/html05_media.html
@@ -1,10 +1,10 @@
 <!-- 
-HTML5 ¹öÀüÀÌ »õ·Ó°Ô ³ª¿À¸é¼­
-°­È­µÈ ±â¼úÀÌ 3°¡Áö°¡ ÀÖ´Ù.
+HTML5 ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ó°ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½é¼­
+ï¿½ï¿½È­ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ 3ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½Ö´ï¿½.
 1. media Tag
    - Audio, Video, IFrame
 2. Semantic Tag
-3. Form TagÀÇ State(css3)
+3. Form Tagï¿½ï¿½ State(css3)
  -->
 <!DOCTYPE html>
 <html>
@@ -14,28 +14,28 @@ HTML5 ¹öÀüÀÌ »õ·Ó°Ô ³ª¿À¸é¼­
 </head>
 <body>
 <div id="wrap">
-	<h2>1. Audio ÅÂ±× »ç¿ëÇÏ±â </h2>
+	<h2>1. Audio ï¿½Â±ï¿½ ï¿½ï¿½ï¿½ï¿½Ï±ï¿½ </h2>
 	<audio src="./media/Kalimba.mp3" controls="controls"></audio>
 	<br/><br/>
-	<h2>2. Video ÅÂ±× »ç¿ëÇÏ±â </h2>
+	<h2>2. Video ï¿½Â±ï¿½ ï¿½ï¿½ï¿½ï¿½Ï±ï¿½ </h2>
 	<video src="./media/canada.mp4" controls="controls" width="600px"></video>
 	<br/><br/>
 	<hr>
-	<h2>3. iframe ÅÂ±× »ç¿ëÇÏ±â </h2>
-	<h3>ÀÎ»çÀÌµå¾Æ¿ô2</h3>
+	<h2>3. iframe ï¿½Â±ï¿½ ï¿½ï¿½ï¿½ï¿½Ï±ï¿½ </h2>
+	<h3>ï¿½Î»ï¿½ï¿½Ìµï¿½Æ¿ï¿½2</h3>
 	<pre>
-	13»ìÀÌ µÈ ¶óÀÏ¸®ÀÇ Çàº¹À» À§ÇØ 
-	¸ÅÀÏ ¹Ù»Ú°Ô ¸Ó¸´¼Ó °¨Á¤ ÄÁÆ®·Ñ º»ºÎ¸¦ ¿î¿µÇÏ´Â 
-	¡®±â»Ý¡¯, ¡®½½ÇÄ¡¯, ¡®¹ö·°¡¯, ¡®±îÄ¥¡¯, ¡®¼Ò½É¡¯. 
-	±×·¯´ø                                        ¾î´À ³¯, 
-	³¸¼± °¨Á¤ÀÎ ¡®ºÒ¾È¡¯, ¡®´çÈ²¡¯, ¡®µûºÐ¡¯, ¡®ºÎ·´¡¯ÀÌ°¡ º»ºÎ¿¡ µîÀåÇÏ°í, 
-	¾ðÁ¦³ª ÃÖ¾ÇÀÇ »óÈ²À» ´ëºñÇÏ¸ç Á¦¸Ú´ë·ÎÀÎ ¡®ºÒ¾È¡¯ÀÌ¿Í ±âÁ¸ °¨Á¤µéÀº °è¼Ó Ãæµ¹ÇÑ´Ù. 
-	°á±¹ »õ·Î¿î °¨Á¤µé¿¡ ÀÇÇØ º»ºÎ¿¡¼­ ÂÑ°Ü³ª°Ô µÈ ±âÁ¸ °¨Á¤µéÀº ´Ù½Ã º»ºÎ·Î µ¹¾Æ°¡±â À§ÇØ 
-	À§ÇèÃµ¸¸ÇÑ ¸ðÇèÀ» ½ÃÀÛÇÏ´Âµ¥¡¦
-	
+	13ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½Ï¸ï¿½ï¿½ï¿½ ï¿½àº¹ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ 
+	ï¿½ï¿½ï¿½ï¿½ ï¿½Ù»Ú°ï¿½ ï¿½Ó¸ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½Æ®ï¿½ï¿½ ï¿½ï¿½ï¿½Î¸ï¿½ ï¿½î¿µï¿½Ï´ï¿½ 
+	ï¿½ï¿½ï¿½ï¿½Ý¡ï¿½, ï¿½ï¿½ï¿½ï¿½ï¿½Ä¡ï¿½, ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½ï¿½ï¿½Ä¥ï¿½ï¿½, ï¿½ï¿½ï¿½Ò½É¡ï¿½. 
+	ï¿½×·ï¿½ï¿½ï¿½                                        ï¿½ï¿½ï¿½ ï¿½ï¿½, 
+	ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ò¾È¡ï¿½, ï¿½ï¿½ï¿½ï¿½È²ï¿½ï¿½, ï¿½ï¿½ï¿½ï¿½ï¿½Ð¡ï¿½, ï¿½ï¿½ï¿½Î·ï¿½ï¿½ï¿½ï¿½Ì°ï¿½ ï¿½ï¿½ï¿½Î¿ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Ï°ï¿½, 
+	ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½Ö¾ï¿½ï¿½ï¿½ ï¿½ï¿½È²ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½Ï¸ï¿½ ï¿½ï¿½ï¿½Ú´ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ò¾È¡ï¿½ï¿½Ì¿ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ ï¿½æµ¹ï¿½Ñ´ï¿½. 
+	ï¿½á±¹ ï¿½ï¿½ï¿½Î¿ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½é¿¡ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Î¿ï¿½ï¿½ï¿½ ï¿½Ñ°Ü³ï¿½ï¿½ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½Ù½ï¿½ ï¿½ï¿½ï¿½Î·ï¿½ ï¿½ï¿½ï¿½Æ°ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ 
+	ï¿½ï¿½ï¿½ï¿½Ãµï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Ï´Âµï¿½ï¿½ï¿½
+	</pre>
 	<iframe width="800" height="450" src="https://www.youtube.com/embed/EiCmnIaj4u8" 
 	 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>	
-	</pre>
+	
 </div>
 </body>
 </html>
