feat:table update

--- a/1-html-basics/step4-list-table/practice2-table.html
+++ b/1-html-basics/step4-list-table/practice2-table.html
@@ -23,7 +23,7 @@
     <h1>테이블</h1>
     <!-- 구조화된 테이블 (thead, tbody, tfoot 사용) -->
     <h2>구조화된 테이블 - 월별 매출 현황</h2>
-    <table border="1">
+    <table>
         <thead>
             <!-- thead: 테이블 헤더 그룹 -->
             <tr>
@@ -121,8 +121,7 @@
     <h2>제품 비교표 (접근성 고려)</h2>
     <table >
         <caption>스마트폰 모델별 주요 사양 비교</caption>
-        <!-- caption: 테이블의 제목이나 설명 (스크린 리더가 먼저 읽음) -->
-        
+        <!-- caption: 테이블의 제목이나 설명 (스크린 리더가 먼저 읽음) -->        
         <thead>
             <tr>
                 <th scope="col">모델명</th>
@@ -199,15 +198,7 @@
                 <td>200</td>
                 <td>170</td>
                 <td><strong>700</strong></td>
-            </tr>
-            <tr>
-                <th scope="row">마케팅팀</th>
-                <td>80</td>
-                <td>95</td>
-                <td>110</td>
-                <td>85</td>
-                <td><strong>370</strong></td>
-            </tr>
+            </tr>            
             <tr>
                 <th scope="row">개발팀</th>
                 <td>120</td>
@@ -227,7 +218,6 @@
                 <td><strong>1,635</strong></td>
             </tr>
         </tfoot>
-    </table>
-    
+    </table>    
 </body>
 </html>
