feat:form semantic css update

--- a/2-css-basics/step3-box-model/index-box-model.html
+++ b/2-css-basics/step3-box-model/index-box-model.html
@@ -1,3 +1,18 @@
+<!--
+    CSS 박스 모델은 웹 페이지의 모든 HTML 요소가 사각형 박스로 간주되는 방식을 설명하는 개념입니다. 📦✨
+
+간단히 말해, **모든 HTML 요소는 콘텐츠(content), 패딩(padding), 테두리(border), 마진(margin)**으로 구성된 박스 형태로 존재한다는 것입니다.
+
+각 구성 요소는 다음과 같습니다:
+
+콘텐츠 (Content): 🖼️ 텍스트, 이미지 등 실제 요소의 내용이 표시되는 영역입니다. width와 height 속성으로 크기를 조절할 수 있습니다.
+
+패딩 (Padding): 🧘‍♀️ 콘텐츠 영역과 테두리 사이의 공간입니다. 콘텐츠를 테두리로부터 떨어뜨려 여백을 만듭니다. padding 속성으로 조절합니다.
+
+테두리 (Border): 📏 패딩과 마진 사이의 선입니다. 요소의 시각적인 경계를 나타냅니다. border 속성으로 두께, 스타일, 색상을 조절할 수 있습니다.
+
+마진 (Margin): 🏞️ 테두리 바깥쪽의 공간으로, 현재 요소와 다른 요소 사이의 간격을 만듭니다. margin 속성으로 조절합니다.
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
