--- a/2-css-basics/step4-flexbox/index-flexbox.html
+++ b/2-css-basics/step4-flexbox/index-flexbox.html
@@ -1,3 +1,17 @@
+<!--
+    Flexbox: 컨테이너 내의 아이템들을 효율적으로 배치하고 정렬하는 1차원 레이아웃 방법입니다.
+핵심 포인트 3가지:
+
+유연한 배치 - 아이템들이 컨테이너 크기에 따라 자동으로 늘어나거나 줄어듭니다
+직관적인 정렬 - 수직/수평 정렬이 매우 간단해집니다
+반응형 친화적 - 다양한 화면 크기에 자연스럽게 적응합니다
+
+🏠 실생활 비유
+마치 도서관 책꽂이와 같습니다. 책꽂이(flex container)에 책들(flex items)을 넣으면, 책의 크기와 수량에 따라 자동으로 배치되고, 필요에 따라 책들 사이의 간격도 조절할 수 있습니다.
+💼 현장 활용 사례
+네비게이션 메뉴, 카드 레이아웃, 센터링, 반응형 그리드 등 거의 모든 웹 레이아웃에서 활용됩니다. 특히 기존의 float이나 position보다 훨씬 직관적이어서 현대 웹 개발의 필수 기술입니다.
+
+-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
