--- a/2-css-basics/step3-box-model/practice2-box-model.html
+++ b/2-css-basics/step3-box-model/practice2-box-model.html
@@ -1,5 +1,5 @@
 <!--
-    CSS 박스 모델은 웹 페이지의 모든 HTML 요소가 사각형 박스로 간주되는 방식을 설명하는 개념입니다. 📦✨
+CSS 박스 모델은 웹 페이지의 모든 HTML 요소가 사각형 박스로 간주되는 방식을 설명하는 개념입니다. 📦✨
 
 간단히 말해, **모든 HTML 요소는 콘텐츠(content), 패딩(padding), 테두리(border), 마진(margin)**으로 구성된 박스 형태로 존재한다는 것입니다.
 
@@ -27,44 +27,15 @@
     <div class="box-model-demo">
         <h2>박스 모델 데모</h2>        
     </div>
+<!--
+     content-box와 border-box의 개념을 정확히 이해하지 못하고 사용하면 레이아웃이 예상과 다르게 틀어지거나, 요소들이 화면 밖으로 삐져나오는 등 전체 화면이 깨지는 현상이 발생할 수 있습니다.
+     
+     content-box (기본값): 🌳 요소의 너비(width)와 높이(height)는 콘텐츠 영역만을 의미합니다. 여기에 padding과 border가 추가되면 요소의 실제 크기는 지정한 width/height보다 커집니다.
 
-    <!-- 여백 비교 예제 -->
-    <div class="spacing-demo">
-        <div class="box margin-example">Margin 예제</div>
-        <div class="box padding-example">Padding 예제</div>
-        <div class="box border-example">Border 예제</div>
-    </div>
+     border-box: 🎁 요소의 너비(width)와 높이(height)는 콘텐츠, padding, border를 모두 포함한 영역을 의미합니다. 즉, 지정한 width/height 안에서 padding과 border가 줄어들어 콘텐츠 영역이 조절됩니다.
+     대부분의 현대 CSS 레이아웃에서는 예측 가능한 동작을 위해 box-sizing: border-box;를 전체 선택자에 적용하고 시작하는 경우가 많습니다.
 
-    <!-- Display 속성 예제 -->
-    <div class="display-demo">
-        <h2>Display 속성 예제</h2>
-
-        <!-- 블록 요소들
-        <div> 는 블록(block) 요소입니다.
-		블록 요소는 기본적으로 
-		항상 새로운 줄에서 시작하며, 
-		**가로 폭을 부모 요소의 100%**를 차지하려고 합니다.
-		        
-         -->
-        <div class="block-demo">블록 요소 1</div>
-        <div class="block-demo">블록 요소 2</div>
-
-        <!-- 인라인 요소들
-        <span> 은 인라인(inline) 요소입니다.
-
-		인라인 요소는 새로운 줄로 넘어가지 않고 
-		텍스트나 다른 인라인 요소와 같은 줄에 나란히 배치됩니다.
-		콘텐츠의 너비만큼만 공간을 차지
-         -->
-        <span class="inline-demo">인라인 요소 1</span>
-        <span class="inline-demo">인라인 요소 2</span>
-        <span class="inline-demo">인라인 요소 3</span>
-
-        <!-- 인라인 블록 요소들 -->
-        <div class="inline-block-demo">인라인 블록 1</div>
-        <div class="inline-block-demo">인라인 블록 2</div>
-        <div class="inline-block-demo">인라인 블록 3</div>
-    </div>
+-->
 
     <!-- 박스 크기 계산 방식 비교 -->
     <div class="box-sizing-demo">
