--- a/2-css-basics/step6-bootstrap/step1-basic.html
+++ b/2-css-basics/step6-bootstrap/step1-basic.html
@@ -1,3 +1,23 @@
+<!--
+🎯 핵심 학습 포인트
+1. Viewport 메타 태그
+
+width=device-width로 화면 너비를 기기에 맞춤
+이것이 없으면 모바일에서 데스크톱 화면이 축소되어 보임
+
+2. CSS Grid의 auto-fit과 minmax()
+
+repeat(auto-fit, minmax(250px, 1fr))는 반응형의 마법
+화면 크기에 따라 열 개수가 자동으로 조정됨
+
+3. 미디어 쿼리 전략
+
+768px: 태블릿과 모바일의 경계
+480px: 작은 모바일까지 고려
+1200px: 큰 화면 최적화
+
+-->
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -43,6 +63,16 @@
     </style>
 </head>
 <body>
+    <!--
+            🎭 "Hero" 클래스명의 유래
+              Hero Section은 웹 디자인 업계에서 널리 사용되는 표준 용어입니다:
+              💡 "Hero"라는 이름을 쓰는 이유
+             Hero Section은 웹페이지의 "주인공" 역할을 하는 섹션입니다. 
+            영화에서 주인공이 첫 등장할 때처럼, 
+           웹사이트 방문자가 가장 먼저 보게 되는 핵심 영역이어서 이런 이름이 붙었습니다.
+           웹페이지에서 가장 중요한 첫 번째 섹션을 의미
+            방문자가 웹사이트에 들어와서 첫 번째로 보는 핵심 영역
+    -->
     <!-- 🎪 페이지 제목 섹션 -->
     <div class="container mt-4">
         <div class="text-center mb-5">
