feat:css flexbox

--- a/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
+++ b/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
@@ -21,7 +21,7 @@ justify = 주축(보통 가로), align = 교차축(보통 세로)
 <head>
     <meta charset="UTF-8">
     <title>Flexbox 레이아웃 학습</title>
-    <link rel="stylesheet" href="../resources/css/style4.css">
+    <link rel="stylesheet" href="../resources/css/style4-1.css">
 </head>
 <body>
     <h1>Flexbox 레이아웃 마스터하기</h1>
