--- a/2-css-basics/step4-flexbox-grid/practice2-flexbox2.html
+++ b/2-css-basics/step4-flexbox-grid/practice2-flexbox2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox 레이아웃 학습</title>
-    <link rel="stylesheet" href="../resources/css/style4.css">
+    <link rel="stylesheet" href="../resources/css/style4-1.css">
 </head>
 <body>
-    <h1>Flexbox 레이아웃 마스터하기 2</h1>
+    <h1>Flexbox 레이아웃 공부 2</h1>
 
     <!-- 실용적인 레이아웃 예제 -->
-    <section class="practical-demo">
+    <div class="practical-demo">
         <h2>실용적인 레이아웃 예제</h2>
 
         <!-- 헤더 -->
@@ -24,7 +24,7 @@
         </header>
 
         <!-- 카드 레이아웃 -->
-        <div class="card-container">
+        <main class="card-container">
             <div class="card">
                 <h3>카드 1</h3>
                 <p>첫 번째 카드 내용입니다.</p>
@@ -39,8 +39,12 @@
                 <h3>카드 3</h3>
                 <p>세 번째 카드 내용입니다.</p>
                 <button>더 보기</button>
-            </div>
-        </div>
-    </section>
+            </div>  
+            <div class="card">
+                <h3>카드 4</h3>
+                <p>네 번째 카드 내용입니다.</p>
+                <button>더 보기</button>
+            </div>                     
+        </main>
 </body>
 </html>
