--- a/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
+++ b/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
@@ -18,74 +18,75 @@ justify = 주축(보통 가로), align = 교차축(보통 세로)
 -->
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Flexbox 레이아웃 학습</title>
-    <link rel="stylesheet" href="../resources/css/style4-1.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../resources/css/style4-1.css" />
+  </head>
+  <body>
     <h1>Flexbox 레이아웃 마스터하기</h1>
 
     <!-- 기본 플렉스 컨테이너 -->
     <section class="flex-basic">
-        <h2>기본 Flexbox</h2>
-        <div class="flex-container">
-            <div class="flex-item">아이템 1</div>
-            <div class="flex-item">아이템 2</div>
-            <div class="flex-item">아이템 3</div>
-        </div>
+      <h2>기본 Flexbox</h2>
+      <div class="flex-container">
+        <!-- inline-block 와 flex를 비교  -->
+        <div class="flex-item">아이템 1</div>
+        <div class="flex-item">아이템 2</div>
+        <div class="flex-item">아이템 3</div>
+      </div>
     </section>
 
     <!-- flex-direction 예제 -->
     <section class="flex-direction-demo">
-        <h2>Flex Direction</h2>
+      <h2>Flex Direction</h2>
 
-        <h3>가로 방향 (row)</h3>
-        <div class="flex-container row">
-            <div class="flex-item">1</div>
-            <div class="flex-item">2</div>
-            <div class="flex-item">3</div>
-        </div>
+      <h3>가로 방향 (row)</h3>
+      <div class="flex-container row">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+      </div>
 
-        <h3>세로 방향 (column)</h3>
-        <div class="flex-container column">
-            <div class="flex-item">1</div>
-            <div class="flex-item">2</div>
-            <div class="flex-item">3</div>
-        </div>
+      <h3>세로 방향 (column)</h3>
+      <div class="flex-container column">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+      </div>
     </section>
 
     <!-- justify-content 예제 -->
     <section class="justify-demo">
-        <h2>Justify Content (주축 정렬)</h2>
+      <h2>Justify Content (주축 정렬)</h2>
 
-        <h3>flex-start (시작점 정렬)</h3>
-        <div class="flex-container justify-start">
-            <div class="flex-item">A</div>
-            <div class="flex-item">B</div>
-            <div class="flex-item">C</div>
-        </div>
+      <h3>flex-start (시작점 정렬)</h3>
+      <div class="flex-container justify-start">
+        <div class="flex-item">A</div>
+        <div class="flex-item">B</div>
+        <div class="flex-item">C</div>
+      </div>
 
-        <h3>center (가운데 정렬)</h3>
-        <div class="flex-container justify-center">
-            <div class="flex-item">A</div>
-            <div class="flex-item">B</div>
-            <div class="flex-item">C</div>
-        </div>
+      <h3>center (가운데 정렬)</h3>
+      <div class="flex-container justify-center">
+        <div class="flex-item">A</div>
+        <div class="flex-item">B</div>
+        <div class="flex-item">C</div>
+      </div>
 
-        <h3>space-between (양 끝 정렬)</h3>
-        <div class="flex-container justify-between">
-            <div class="flex-item">A</div>
-            <div class="flex-item">B</div>
-            <div class="flex-item">C</div>
-        </div>
+      <h3>space-between (양 끝 정렬)</h3>
+      <div class="flex-container justify-between">
+        <div class="flex-item">A</div>
+        <div class="flex-item">B</div>
+        <div class="flex-item">C</div>
+      </div>
 
-        <h3>space-around (균등 분배)</h3>
-        <div class="flex-container justify-around">
-            <div class="flex-item">A</div>
-            <div class="flex-item">B</div>
-            <div class="flex-item">C</div>
-        </div>
-    </section>    
-</body>
+      <h3>space-around (균등 분배)</h3>
+      <div class="flex-container justify-around">
+        <div class="flex-item">A</div>
+        <div class="flex-item">B</div>
+        <div class="flex-item">C</div>
+      </div>
+    </section>
+  </body>
 </html>
