--- a/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
+++ b/2-css-basics/step4-flexbox-grid/practice1-flexbox.html
@@ -1,4 +1,8 @@
 <!--
+
+1. 레이아웃이란?
+레이아웃은 웹페이지에서 요소들의 위치와 크기를 결정하는 방법입니다. 
+마치 건물의 설계도처럼, 각 요소가 어디에 어떻게 배치될지를 정의합니다.
 Flexbox: 컨테이너 내의 아이템들을 효율적으로 배치하고 정렬하는 1차원 레이아웃 방법입니다.
 핵심 포인트 3가지:
 유연한 배치 - 아이템들이 컨테이너 크기에 따라 자동으로 늘어나거나 줄어듭니다
@@ -24,7 +28,7 @@ justify = 주축(보통 가로), align = 교차축(보통 세로)
     <link rel="stylesheet" href="../resources/css/style4-1.css" />
   </head>
   <body>
-    <h1>Flexbox 레이아웃 마스터하기</h1>
+    <h1>Flexbox 레이아웃 - flex</h1>
 
     <!-- 기본 플렉스 컨테이너 -->
     <section class="flex-basic">
