--- a/1-html-basics/step4-list-table/practice2-table.html
+++ b/1-html-basics/step4-list-table/practice2-table.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>고급 테이블 기능</title>
     <style>
+        /* css 는 내일 공부 예정  */
   table {
     width: 100%;
     border-collapse: collapse; /* 테이블 테두리 겹치게 설정 */
@@ -179,7 +180,7 @@
             <tr>
                 <th rowspan="2" scope="col">부서</th>
                 <!-- 2행에 걸쳐진 헤더 -->
-                <th colspan="4" scope="colgroup">2024년 분기별 실적</th>
+                <th colspan="4" scope="colgroup">2024년 분기별 실적</th>=
                 <!-- 4열에 걸쳐진 헤더, scope="colgroup": 열 그룹을 대표 -->
                 <th rowspan="2" scope="col">연간 합계</th>
             </tr>
