--- a/1-html-basics/step6-semantic/html5-SemanticTag-all.html
+++ b/1-html-basics/step6-semantic/html5-SemanticTag-all.html
@@ -251,7 +251,7 @@ HTML5 시맨틱 태그 정리와 CSS 맛보기
     </main>
 
     <!-- ========== ASIDE: 부가 정보 영역 ========== -->
-    <aside>
+    <aside id="skills">
       <!-- aside: 주요 콘텐츠와 간접적으로 관련된 보조 정보 -->
       <!-- 사이드바, 광고, 관련 링크 등에 사용 -->
 
