--- a/2-css-basics/step3-box-model/practice1-display.html
+++ b/2-css-basics/step3-box-model/practice1-display.html
@@ -36,6 +36,12 @@ inline 요소
         가로 배치되면서도 정확한 크기 제어가 가능합니다.
         네비게이션 메뉴 버튼, 카드형 리스트, 태그 버튼, 아이콘과 텍스트가 함께 있는 버튼 등에서 자주 사용됩니다. 특히 가로 배치하면서도 정확한 크기 제어가 필요한 UI 컴포넌트에서 핵심적입니다.
         현대 웹 개발에서는 더 강력한 Flexbox나 Grid를 주로 사용
+
+        inline-block 요소들 사이에 나타나는 좌우 간격의 본질적인 이유는 HTML 소스 코드에서 태그들 사이의 **공백 문자(whitespace)**가 실제 화면에 렌더링되기 때문입니다.
+        🔍 핵심 개념
+        공백 문자 렌더링: HTML에서 태그 사이의 줄바꿈, 스페이스, 탭 등은 브라우저에 의해 하나의 공백 문자로 해석되어 화면에 표시됩니다.
+
+        Flexbox나 CSS Grid를 더 많이 사용합니다. 이들은 공백 문제가 없고 더 강력한 레이아웃 제어가 가능
         -->
         <div class="inline-block-demo">인라인 블록 1</div>
         <div class="inline-block-demo">인라인 블록 2</div>
